--- a/NoteBin3/src/NoteBin3/project.json
+++ b/NoteBin3/src/NoteBin3/project.json
@@ -13,7 +13,9 @@
     "Microsoft.AspNetCore.Owin": "1.0.0",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0",
     "Microsoft.Extensions.Configuration.CommandLine": "1.0.0",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0"
+    "Microsoft.Extensions.Configuration.Json": "1.0.0",
+    "LiteDB.Core": "2.0.2",
+    "Nancy.Authentication.Stateless": "2.0.0-barneyrubble"
   },
 
   "tools": {
