--- a/NoteBin3/src/NoteBin3/project.json
+++ b/NoteBin3/src/NoteBin3/project.json
@@ -16,7 +16,11 @@
     "Microsoft.Extensions.Configuration.Json": "1.0.0",
     "LiteDB.Core": "2.0.2",
     "Nancy.Authentication.Stateless": "2.0.0-barneyrubble",
-    "Nancy.Authentication.Forms": "2.0.0-barneyrubble"
+    "Nancy.Authentication.Forms": "2.0.0-barneyrubble",
+    "System.Linq": "4.1.0",
+    "System.Collections.Immutable": "1.2.0",
+    "System.Linq.Queryable": "4.0.1",
+    "System.Interactive.Async": "3.0.0"
   },
 
   "tools": {
